# mistercast-linux

./: .gitignore  CMakeLists.txt  README.md
packaging/: PKGBUILD  mistercast.desktop
src/: main.cpp
src/app/: StreamingCoordinator.cpp  StreamingCoordinator.h
src/audio/: PipeWireAudioCapture.cpp  PipeWireAudioCapture.h
src/capture/: PipeWireVideoCapture.cpp  PipeWireVideoCapture.h  PortalRequest.cpp  PortalRequest.h  PortalResponse.cpp  PortalResponse.h  PortalSession.cpp  PortalSession.h  ScreenCastPortal.cpp  ScreenCastPortal.h
src/core/: AudioFrameCadence.h  FrameFields.cpp  FrameFields.h  FrameMailbox.cpp  FrameMailbox.h  FrameProcessor.cpp  FrameProcessor.h  FrameSequence.h  Modeline.h  ModelineCatalog.cpp  ModelineCatalog.h  StereoSampleRing.cpp  StereoSampleRing.h  StreamTypes.h
src/stream/: GroovyMister.cpp  GroovyMister.h  GroovyProtocolCodec.cpp  GroovyProtocolCodec.h  StreamConfig.h  StreamController.cpp  StreamController.h  StreamDiagnostics.h  StreamSession.cpp  StreamSession.h  StreamTimingPolicy.cpp  StreamTimingPolicy.h
src/ui/: MainWindow.cpp  MainWindow.h
tests/: ConcurrencyTest.cpp  FrameProcessorTest.cpp  GroovyMisterTest.cpp  PortalResponseTest.cpp
